--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteCommentModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_DeleteCommentModalPartial.cshtml
@@ -8,17 +8,17 @@
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Comment</h1>
             </div>
-            <div class="modal-body">
+            <div class="modal-body fs-5">
                 Are you sure you want to delete your comment?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                <button type="button" class="btn btn-primary px-5 fs-5" data-bs-dismiss="modal">
                     Close
                 </button>
                 <form method="post" asp-controller="Comment" asp-action="Delete">
-                    <input type="hidden" name="commentId" class="modelIdInput" value="" />
+                    <input type="hidden" name="deleteCommentId" class="modelIdInput" value="" />
                     <input type="hidden" name="bookId" value=@Model.Id />
-                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <button type="submit" class="btn btn-danger px-5 fs-5">Delete</button>
                 </form>
             </div>
         </div>
