--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_RateBookModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_RateBookModalPartial.cshtml
@@ -48,7 +48,12 @@
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
                     Close
                 </button>
-                <button data-model-id="@Model.Id" id="rateBtn" type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                <button
+                    data-model-id="@Model.Id"
+                    id="rateBtn"
+                    type="button"
+                    class="btn btn-primary"
+                    data-bs-dismiss="modal">
                     Rate
                 </button>
             </div>
