--- a/Web/Bookworm.Web/wwwroot/css/books/bookDetails.css
+++ b/Web/Bookworm.Web/wwwroot/css/books/bookDetails.css
@@ -62,7 +62,6 @@
     .bookDetailsDescSection .card {
         font-size: 1.2rem;
         border: solid 2px black;
-        width: 75%;
     }
 
         .bookDetailsDescSection .card .card-body {
@@ -70,12 +69,9 @@
         }
 
 .bookDetailsCommentsSection {
-    padding: 2rem 0;
+    width: 100%;
+    margin-bottom: 2rem;
 }
-
-    .bookDetailsCommentsSection .tox {
-        border: solid 2px black;
-    }
 
     .bookDetailsCommentsSection h2 {
         text-align: center;
@@ -84,22 +80,50 @@
     .bookDetailsCommentsSection .formContainer {
         display: flex;
         justify-content: center;
+        margin-bottom: 2rem;
     }
 
+        .bookDetailsCommentsSection .formContainer .button {
+            border: solid 3px black;
+            padding: 0.5rem 2rem;
+        }
+
         .bookDetailsCommentsSection .formContainer form {
-            width: 70%;
             border: solid 2px black;
             border-radius: 15px;
             padding: 2rem;
+            width: 100%;
         }
 
 .commentsSection {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    padding-top: 2rem;
+    padding: 2rem 1rem;
+    border: solid 2px black;
+    border-radius: 15px;
 }
+
+    .commentsSection .sortCommentsBtnsContainer {
+        display: flex;
+        justify-content: center;
+        margin: 1rem 0;
+    }
+
+        .commentsSection .sortCommentsBtnsContainer .btn-group {
+            width: 70%;
+            border: solid 2px black;
+        }
+
+            .commentsSection .sortCommentsBtnsContainer .btn-group label {
+                font-weight: bold;
+                font-size: 1.3rem;
+                font-style: italic;
+            }
+
+    .commentsSection .commentsContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
 
     .commentsSection .commentActionsContainer {
         display: flex;
@@ -132,9 +156,9 @@
                     font-size: 2.5rem;
                 }
 
-                    .commentsSection .card .card-header .arrowsContainer i:hover {
-                        cursor: pointer;
-                    }
+                .commentsSection .card .card-header .arrowsContainer .hover:hover {
+                    cursor: pointer;
+                }
 
 .greenUpArrow {
     color: green;
