--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_RateBookModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_RateBookModalPartial.cshtml
@@ -14,46 +14,32 @@
                         <div class="row justify-content-center">
                             <!-- star rating -->
                             <div class="rating-wrapper">
-                                <!-- star 5 -->
-                                <input type="radio" id="5-star-rating" name="star-rating" value="5">
-                                <label for="5-star-rating" class="star-rating">
-                                    <i class="fas fa-star d-inline-block"></i>
-                                </label>
-                                <!-- star 4 -->
-                                <input type="radio" id="4-star-rating" name="star-rating" value="4">
-                                <label for="4-star-rating" class="star-rating star">
-                                    <i class="fas fa-star d-inline-block"></i>
-                                </label>
-                                <!-- star 3 -->
-                                <input type="radio" id="3-star-rating" name="star-rating" value="3">
-                                <label for="3-star-rating" class="star-rating star">
-                                    <i class="fas fa-star d-inline-block"></i>
-                                </label>
-                                <!-- star 2 -->
-                                <input type="radio" id="2-star-rating" name="star-rating" value="2">
-                                <label for="2-star-rating" class="star-rating star">
-                                    <i class="fas fa-star d-inline-block"></i>
-                                </label>
-                                <!-- star 1 -->
-                                <input type="radio" id="1-star-rating" name="star-rating" value="1">
-                                <label for="1-star-rating" class="star-rating star">
-                                    <i class="fas fa-star d-inline-block"></i>
-                                </label>
+                                @for (int i = 5; i >= 1; i--)
+                                {
+                                    <input type="radio"
+                                           id=@($"{i}-star-rating")
+                                           name="star-rating"
+                                           value=@(i) @(Model.UserRating == i ? "checked" : "")>
+                                    <label for=@($"{i}-star-rating") class="star-rating">
+                                        <i class="fas fa-star d-inline-block"></i>
+                                    </label>
+                                }
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                <button type="button"
+                        class="btn btn-warning fs-5 px-5 border-3 border-dark"
+                        data-bs-dismiss="modal">
                     Close
                 </button>
-                <button
-                    data-model-id="@Model.Id"
-                    id="rateBtn"
-                    type="button"
-                    class="btn btn-primary"
-                    data-bs-dismiss="modal">
+                <button data-model-id="@Model.Id"
+                        id="rateBtn"
+                        type="button"
+                        class="btn btn-success fs-5 px-5 border-3 border-dark"
+                        data-bs-dismiss="modal">
                     Rate
                 </button>
             </div>
