Add go to top arrow button

--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
         <main role="main">
             @this.RenderBody()
         </main>
+        <button class="topArrow"><i class="fa fa-arrow-up"></i></button>
     </div>
 
 
