--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <section class="welcomeSection mt-5">
     <h1 class="text-center mb-5">Welcome to @GlobalConstants.SystemName!</h1>
-    <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2 border-dark">
+    @* <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2 border-dark">
         <div class="card-header fs-4">
             Quote
         </div>
@@ -33,7 +33,7 @@
                 }
             </blockquote>
         </div>
-    </div>
+    </div> *@
 </section>
 
 @if (this.User.Identity.IsAuthenticated)
